--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -1,23 +1,15 @@
-name: Build and Run Docker
+tages:
+  - build
+  - deploy
 
-on:
-  push:
-    branches:
-      - main  # or your branch name
+build_image:
+  stage: build
+  script:
+    - docker build -t website .
 
-jobs:
-  build-and-run:
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
-
-      - name: Set up Docker
-        uses: docker/setup-buildx-action@v3
-
-      - name: Build Docker image
-        run: docker build -t my-app .
-
-      - name: Run Docker container
-        run: docker run -d -p 3000:3000 my-app
+deploy:
+  stage: deploy
+  script:
+    - docker stop website|| true
+    - docker rm website || true
+    - docker run -d -p 8000:80 --name website website
