--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -1,15 +1,28 @@
-tages:
-  - build
-  - deploy
+name: Build and Deploy
 
-build_image:
-  stage: build
-  script:
-    - docker build -t website .
+on:
+  push:
+    branches:
+      - main  # or your branch name
 
-deploy:
-  stage: deploy
-  script:
-    - docker stop website|| true
-    - docker rm website || true
-    - docker run -d -p 8000:80 --name website website
+jobs:
+  build-and-deploy:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Set up Docker
+        uses: docker/setup-buildx-action@v3
+
+      - name: Build Docker image
+        run: docker build -t website .
+
+      - name: Stop and Remove existing container
+        run: |
+          docker stop website || true
+          docker rm website || true
+
+      - name: Run Docker container
+        run: docker run -d -p 8000:80 --name website website
